[FIX] Sticky header row on Safari and Chrome

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -603,8 +603,8 @@ html .o_web_client .o_main .o_main_content {
 
     .o_list_view {
         // th & td are here for compatibility with chrome
-        thead, thead tr:nth-child(1) th {
-            position: sticky;
+        thead tr:nth-child(1) th {
+            position: sticky!important;
             top: 0;
             z-index: 1;
         }
@@ -612,7 +612,7 @@ html .o_web_client .o_main .o_main_content {
             background-color: $o-list-footer-bg-color;
         }
         tfoot, tfoot tr:nth-child(1) td {
-            position: sticky;
+            position: sticky!important;
             bottom: 0;
         }
         tfoot tr:nth-child(1) td {
